# tree-sitter-tamarin

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  test.spthy  test_simple.spthy
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: empty_theory  equation_declaration  equation_declaration2  function_declaration  functions_in_facts  importing_builtins  lemmas  multi_fact_rule  multiline_comments  one_line_comment  rule_attrs  rule_with_different_types  rule_with_let  simple_macro  simple_rule  simple_rule_with_action  simple_rule_with_action_indent  tactics
