[package]
name = "tree-sitter-tamarin"
description = "Tamarin grammar for the tree-sitter parsing library"
version = "1.6.1"
keywords = ["incremental", "parsing", "Tamarin"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/aeyno/tree-sitter-tamarin"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
